<resources>
    <string name="app_name">My Fitness</string>
    <string name="text_name_results">Активность</string>
    <string name="text_name_trainigs">Тренировки </string>
    <string name="text_name_marathon">Марафон </string>
    <string name="text_name_library">Библиотека</string>
    <string name="text_name_settings">Настройки</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="name_user">Имя пользователя</string>
    <string name="my_training">Моя тренировка</string>
    <string name="description">Описание</string>
    <string name="target">Цель</string>
    <string name="time">Время</string>
    <string name="main_text_results">Начни свой день с тренировки!</string>
    <string name="mini_text_results">Тренируйтесь и делитесь результатом с друзьями</string>
    <string name="training_text_results">Тренировки</string>
    <string name="marathon_results">Марафон</string>
    <string name="history_results">История</string>
    <string name="last_training">Последние тренировки</string>
    <string name="power_training">Силовая тренирвока</string>
    <string name="meditation_training">Медитация</string>
    <string name="enter_your_username">Введите имя пользователя</string>
    <string name="your_level">Ваш уровень</string>
    <string name="beginning_set">Начинающий</string>
    <string name="average_set">Средний</string>
    <string name="confident_set">Уверенный</string>
    <string name="configurator_set">Конфигуратор</string>
    <string name="mitutes_set">Минуты</string>
    <string name="hours_set">Часы</string>
    <string name="km_set">Километры</string>
    <string name="ml_set">Мили</string>
    <string name="treadmill_set">Беговая дорожка</string>
    <string name="running_outside_set">Бег на улице</string>
    <string name="type_of_sport_set">Вид спорта</string>
    <string name="soccer">Футбол</string>
    <string name="basketball_set">Баскетбол</string>
    <string name="swimming_set">Плавание</string>
    <string name="save_set">Сохранить</string>
    <string name="active_users_today">Активных пользователей сегодня</string>
    <string name="my_results_today_tr">Мои сегодняшние результаты:</string>
    <string name="target_tr">Цель:</string>
    <string name="time_tg">Время:</string>
    <string name="likes_tr">10 отметок нравится</string>
    <string name="add_button_training">Добавить</string>
    <string name="add_button_marathon">Добавить</string>
    <string name="text_mini_marathon">Занимайтесь каждый день, чтобы достичь 100%</string>
    <string name="important_text">Важное</string>
    <string name="plan_text">План:</string>

</resources>