<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/part_payments_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:hint="@string/name_user"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue"
            android:hint="@string/my_training"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/planTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue"
            android:hint="@string/description"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aimTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue"
            android:hint="@string/target"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue"
            android:hint="@string/time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/blue"
            android:text="Добавить"
            android:textColor="@color/white"/>

    </LinearLayout>
</FrameLayout>
