<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/enter_your_username"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/your_level"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="16dp">

                        <RadioButton
                            android:id="@+id/level1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/beginning_set"
                            android:checked="true"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/level2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average_set"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/level3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confident_set"
                            android:textColor="@color/black" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginVertical="25dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/volume"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/configurator_set"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/mitutes_set" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/minuteSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="@color/white"
                            app:trackTint="@color/blue" />



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/hours_set" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/km_set" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/kmSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="@color/white"
                            app:trackTint="@color/blue" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:text="@string/ml_set" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:gravity="end"
                            android:text="@string/treadmill_set" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/runSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="@color/white"
                            app:trackTint="@color/blue"  />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:text="@string/running_outside_set"
                            />

                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                android:orientation="vertical"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/type_of_sport_set"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="16dp">

                        <RadioButton
                            android:id="@+id/sport1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/soccer" />

                        <RadioButton
                            android:id="@+id/sport2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/basketball_set" />

                        <RadioButton
                            android:id="@+id/sport3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/swimming_set" />
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/save_set"
                android:layout_marginBottom="20dp"
                android:textAllCaps="true" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>